--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-wheel-of-fortune",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "React Native Wheel Of Fortune Component.",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,8 @@
   ],
   "dependencies": {
     "d3-shape": "^1.3.5",
-    "react-native-svg": "^9.9.5"
+    "react-native-svg": "^9.9.5",
+    "underscore": "^1.13.4"
   },
   "author": "Eftal Yurtseven",
   "license": "MIT",
